# VRLRRG-Voice-Room-Live-Real-time-Report-Generator

./: CMakeLists.txt  LICENSE  README.md  README_CN.md  Update.md  Update_CN.md
Docs/: Build.md  Build_CN.md  Develop.md  Develop_CN.md  ImportTheUILibrary.md  ImportTheUILibrary_CN.md
Src/: DataStructures.h  main.cpp
